test/oscar/compiler/errors/messageNotFound.oscar
message testNow()


actor Tester() {

  receive = {
    | testNow() => {
        Println("Error");
      }
    | die() => {
      }
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>();
  message<testLater>() |> tester;
  message<die>() |> tester;
}
